--- a/index.html
+++ b/index.html
@@ -45,19 +45,22 @@
 	maxZoom: 14
   }).addTo(map);
 	    
-  d3.text('./eos_dem_4326.asc', function (asc) {
-  	var se = L.ScalarField.fromASCIIGrid(asc);
-    	var layere = L.canvasLayer.scalarField(se).addTo(map);
-	layere.setColor(chroma.scale(['#fafa6e','#2A4858']).mode('lch').colors(6));  
-	controlLayers.addOverlay(layere, 'District level');
-    		  
-    	layerd.on('click', function (ee) {
-	    if (ee.value !== null) {
-		    var ve = ee.value; //.toFixed(1);
-		    var htmle = `<span class="popupText">Category: ${ve} </span>`;
-		    var popupe = L.popup().setLatLng(ee.latlng).setContent(htmle).openOn(map);
-	    }
-    	});	  
+  d3.request("./eos_dem_4326.tif").responseType('arraybuffer').get(
+      function (error, tiffData) {
+      		var dem = L.ScalarField.fromGeoTIFF(tiffData.response);
+		var layerD = L.canvasLayer.scalarField(dem, {
+                    color: chroma.scale(['#fafa6e','#2A4858']).mode('lch').colors(6).domain(dem.range),
+                    opacity: 0.65
+      }).addTo(map);
+                layerD.on('click', function (e) {
+                    if (e.value !== null) {
+                        var v = e.value.toFixed(0);
+                        var html = (`<span class="popupText">Geopotential height ${v} m</span>`);
+                        var popup = L.popup()
+                            .setLatLng(e.latlng)
+                            .setContent(html)
+                            .openOn(map);
+                    }
   });
   
   map.attributionControl.addAttribution('Elevation: NASA JPL <a href="https://www2.jpl.nasa.gov/srtm/">SRTM</a>');  
