--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 	    
   d3.request("./eos_dem_4326.tiff").responseType('arraybuffer').get(
       function (error, tiffData) {
-      		let dem = L.ScalarField.fromGeoTIFF(tiffData.response);
+      		let dem = L.ScalarField.fromGeoTIFF(tiffData.response, bandIndex = 0);
 		let layerD = L.canvasLayer.scalarField(dem).addTo(map);
 	      	layerD.setColor(chroma.scale(['#fafa6e','#2A4858']).mode('lch').colors(6); 
 	        controlLayers.addOverlay(layerD, 'DEM');
