--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
   <style>
   body { margin:0; padding:0; }
   #map { position: absolute; top:0; bottom:0; right:0; left:0; }
+  .github-fork-ribbon.right-top:before { background-color: #454545; }
+  .github-fork-ribbon.right-top:after { color: #dbdbdb; border-width: 0; text-shadow: 0 -.00em rgba(0, 0, 0, 0.5); }
   </style>
 </head>
 <body>
