--- a/index.html
+++ b/index.html
@@ -14,7 +14,12 @@
   crossorigin="anonymous"></script>
 
   <script src='https://api.tiles.mapbox.com/mapbox.js/plugins/leaflet-omnivore/v0.3.1/leaflet-omnivore.min.js'></script>
-
+	
+  <script src="//cdnjs.cloudflare.com/ajax/libs/chroma-js/1.3.4/chroma.min.js"></script>
+  <script src="//d3js.org/d3.v4.min.js"></script>
+  <script src="//npmcdn.com/geotiff@0.3.6/dist/geotiff.js"></script>
+  <script src="https://ihcantabria.github.io/Leaflet.CanvasLayer.Field/dist/leaflet.canvaslayer.field.js"></script>
+	
   <style>
   body { margin:0; padding:0; }
   #map { position: absolute; top:0; bottom:0; right:0; left:0; }
