--- a/index.html
+++ b/index.html
@@ -33,11 +33,7 @@
   <a class="github-fork-ribbon right-top" href="https://cartoscience.com" data-ribbon="cartoscience.com" title="cartoscience.com">cartoscience.com</a>
   <script>
 
-  var map = L.map('map', {
-    center: [40.712216, -74.22655], 
-    zoom: 5, 
-    scrollWheelZoom: true
-  });
+  var map = L.map('map', {scrollWheelZoom: true});
 
   var Esri_WorldImagery = L.tileLayer('https://server.arcgisonline.com/ArcGIS/rest/services/World_Imagery/MapServer/tile/{z}/{y}/{x}', {
 	  attribution: 'Tiles &copy; Esri &mdash; Source: Esri, i-cubed, USDA, USGS, AEX, GeoEye, Getmapping, Aerogrid, IGN, IGP, UPR-EGP, and the GIS User Community'
