--- a/index.html
+++ b/index.html
@@ -33,12 +33,35 @@
   <a class="github-fork-ribbon right-top" href="https://cartoscience.com" data-ribbon="cartoscience.com" title="cartoscience.com">cartoscience.com</a>
   <script>
 
-  var map = L.map('map', {scrollWheelZoom: true});
+  var map = L.map('map', {
+    center: [40.712216, -74.22655], 
+    zoom: 5, 
+    scrollWheelZoom: true
+  });
 
   var Esri_WorldImagery = L.tileLayer('https://server.arcgisonline.com/ArcGIS/rest/services/World_Imagery/MapServer/tile/{z}/{y}/{x}', {
 	  attribution: 'Tiles &copy; Esri &mdash; Source: Esri, i-cubed, USDA, USGS, AEX, GeoEye, Getmapping, Aerogrid, IGN, IGP, UPR-EGP, and the GIS User Community'
   }).addTo(map); 
-
+	  
+  d3.request("./eos_dem_4326.tiff").responseType('arraybuffer').get(
+        function (error, tiffData) {
+      		let dem = L.ScalarField.fromGeoTIFF(tiffData.response);
+	    	let layerD = L.canvasLayer.scalarField(dem).addTo(map);
+	      	layerD.setColor(chroma.scale(['#fafa6e','#2A4858'])); 
+	        controlLayers.addOverlay(layerD, 'DEM');
+		map.fitBounds(layerc.getBounds());
+                layerD.on('click', function (e) {
+                    if (e.value !== null) {
+                        let v = e.value;
+                        let html = (`<span class="popupText">Elevation: ${v} m</span>`);
+                        let popup = L.popup()
+                            .setLatLng(e.latlng)
+                            .setContent(html)
+                            .openOn(map);
+                    }
+	    });
+  });
+	  
   </script>
 </body>
 </html>
