--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         function (error, tiffData) {
       		let dem = L.ScalarField.fromGeoTIFF(tiffData.response);
 	    	let layerD = L.canvasLayer.scalarField(dem).addTo(map);
-	      	layerD.setColor(chroma.scale(['#fafa6e','#2A4858'])); 
+	      	layerD.setColor(chroma.scale('RdPu').domain(dem.range)); 
 	        controlLayers.addOverlay(layerD, 'DEM');
 		map.fitBounds(layerc.getBounds());
                 layerD.on('click', function (e) {
