--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 	  
   d3.request("./eos_dem_4326.tiff").responseType('arraybuffer').get(
         function (error, tiffData) {
-      		let dem = L.ScalarField.fromGeoTIFF(tiffData.response);
+      		let dem = L.ScalarField.fromGeoTIFF(tiffData.response, bandIndex = 0);
 	    	let layerD = L.canvasLayer.scalarField(dem).addTo(map);
 	      	layerD.setColor(chroma.scale('RdPu').domain(dem.range)); 
 	        controlLayers.addOverlay(layerD, 'DEM');
