--- a/index.html
+++ b/index.html
@@ -57,7 +57,8 @@
                     }
 	    });
   });
-  map.fitBounds([[-12.283337,21.574463],[-10.882853,20.725894]]);
+  
+  map.fitBounds([[21.574463,-12.283337],[20.725894,-10.882853]]);
 	  
   </script>
 </body>
