--- a/index.html
+++ b/index.html
@@ -25,11 +25,13 @@
   #map { position: absolute; top:0; bottom:0; right:0; left:0; }
   .github-fork-ribbon.right-top:before { background-color: #454545; }
   .github-fork-ribbon.right-top:after { color: #dbdbdb; border-width: 0; text-shadow: 0 -.00em rgba(0, 0, 0, 0.5); }
+  .background-img { background:url('./legend.png'); background-position: bottom right; }
   </style>
 </head>
 <body>
 
   <div id="map"></div>
+  <div id="legend-img" class="legend-img" ></div>
   <a class="github-fork-ribbon right-top" href="https://cartoscience.com" data-ribbon="cartoscience.com" title="cartoscience.com">cartoscience.com</a>
   <script>
 
