--- a/index.html
+++ b/index.html
@@ -25,18 +25,21 @@
   #map { position: absolute; top:0; bottom:0; right:0; left:0; }
   .github-fork-ribbon.right-top:before { background-color: #454545; }
   .github-fork-ribbon.right-top:after { color: #dbdbdb; border-width: 0; text-shadow: 0 -.00em rgba(0, 0, 0, 0.5); }
-  .background-img { background:url('./legend.png'); background-position: bottom right; }
+  
   </style>
 </head>
 <body>
 
   <div id="map"></div>
-  <div id="legend-img" class="legend-img" ></div>
+  <div style='position:relative; border:1px solid red; margin-top:100px;'> 
+  <img src=".legend.png" style='position:fixed; top:0; left:0;' width='' height='' alt='' />
+  </div>
+
   <a class="github-fork-ribbon right-top" href="https://cartoscience.com" data-ribbon="cartoscience.com" title="cartoscience.com">cartoscience.com</a>
   <script>
 
-  var map = L.map('map', {zoom: 11, scrollWheelZoom: true});
-  var controlLayers = L.control.layers( null, null, {position: "topleft"}).addTo(map);
+  var map = L.map('map', {zoomControl: false; scrollWheelZoom: true});
+  var controlLayers = L.control.layers( null, null, {position: "bottomright"}).addTo(map);
 	  
   var Esri_WorldImagery = L.tileLayer('https://server.arcgisonline.com/ArcGIS/rest/services/World_Imagery/MapServer/tile/{z}/{y}/{x}', {
 	  attribution: 'Tiles &copy; Esri &mdash; Source: Esri, i-cubed, USDA, USGS, AEX, GeoEye, Getmapping, Aerogrid, IGN, IGP, UPR-EGP, and the GIS User Community'
@@ -59,8 +62,10 @@
                     }
 	    });
   });
-  
+
   map.fitBounds([[21.574463,-12.283337],[20.725894,-10.882853]]);
+  map.attributionControl.addAttribution('Map design by Brad G. Peter, &copy <a href="https://cartoscience.com/multiscalar-decision-support">CartoScience</a>, <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY-NC-SA 4.0</a>');
+  map.attributionControl.addAttribution('NASA JPL <a href="https://www2.jpl.nasa.gov/srtm/>SRTM<a/>');
 	  
   </script>
 </body>
