--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
   <div id="map"></div>
   <div style='position:relative; border:1px solid red; margin-top:100px;'> 
-  <img src=".legend.png" style='position:fixed; top:0; left:0;' width='' height='' alt='' />
+  <img src="./legend.png" style='position:fixed; top:0; left:0;' width='' height='' alt='' />
   </div>
 
   <a class="github-fork-ribbon right-top" href="https://cartoscience.com" data-ribbon="cartoscience.com" title="cartoscience.com">cartoscience.com</a>
