--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <body>
 
   <div id="map"></div>
-  <div style='position:relative; border:1px solid red; margin-top:100px;'> 
+  <div style=''> 
   <img src="./legend.png" style='position:fixed; top:0; left:0;' width='' height='' alt='' />
   </div>
 
