--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <body>
 
   <div id="map"></div>
-  <img src="./legend.png" style='position:fixed; top:0; left:0;>
+  <img src="./legend.png" style='position:fixed; top:0; left:0;/>
 
   <a class="github-fork-ribbon right-top" href="https://cartoscience.com" data-ribbon="cartoscience.com" title="cartoscience.com">cartoscience.com</a>
   <script>
