--- a/index.html
+++ b/index.html
@@ -32,7 +32,6 @@
 <body>
 
   <div id="map"></div>
-
   <a class="github-fork-ribbon right-top" href="https://cartoscience.com" data-ribbon="cartoscience.com" title="cartoscience.com">cartoscience.com</a>
   <script>
 
@@ -63,8 +62,7 @@
 
   map.fitBounds([[21.574463,-12.283337],[20.725894,-10.882853]]);
   map.attributionControl.addAttribution('Map design by Brad G. Peter, &copy <a href="https://cartoscience.com/multiscalar-decision-support">CartoScience</a>, <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY-NC-SA 4.0</a>');
-  map.attributionControl.addAttribution('NASA JPL <a href="https://www2.jpl.nasa.gov/srtm/>SRTM<a/>');
-	  
+  map.attributionControl.addAttribution('NASA JPL <a href="https://www2.jpl.nasa.gov/srtm/">SRTM<a/>');  
   </script>
 </body>
 </html>
