--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
   body { margin:0; padding:0; }
   #map { position: absolute; top:0; bottom:0; right:0; left:0; }
   .github-fork-ribbon.right-top:before { background-color: #454545; }
+  #map-title { position: fixed; margin-top: 10px; margin-left: 50px; float: left; z-index: 800; }
   .github-fork-ribbon.right-top:after { color: #dbdbdb; border-width: 0; text-shadow: 0 -.00em rgba(0, 0, 0, 0.5); }
 	  
   </style>
@@ -31,6 +32,7 @@
 <body>
 
   <div id="map"></div>
+  <div id="map-title"><img src="./legend.png"</div>
   <a class="github-fork-ribbon right-top" href="https://cartoscience.com" data-ribbon="cartoscience.com" title="cartoscience.com">cartoscience.com</a>
   <script>
 
