--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   #map { position: absolute; top:0; bottom:0; right:0; left:0; }
   .github-fork-ribbon.right-top:before { background-color: #454545; }
   .github-fork-ribbon.right-top:after { color: #dbdbdb; border-width: 0; text-shadow: 0 -.00em rgba(0, 0, 0, 0.5); }
-  #map-legend { position: fixed; margin-top: 15px; margin-left: 50px; z-index: 800}.
+  #map-legend { position: fixed; margin-top: 15px; margin-left: 50px; z-index: 800; }
 	  
   </style>
 </head>
