--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <body>
 
   <div id="map"></div>
-  <div id="map-legend"><img src="./legend.png"></div>
+  <div id="map-legend"><img src="./eos_legend.png"></div>
   <a class="github-fork-ribbon right-top" href="https://cartoscience.com" data-ribbon="cartoscience.com" title="cartoscience.com">cartoscience.com</a>
   <script>
 
